--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta name="Description" content="Buy your tickets to Kennedy Space Center Visitor Complex online. Don&#39;t miss seeing Space Shuttle Atlantis or meeting a veteran NASA astronaut!" />
     <meta name="keywords" content="nasa tickets, Kennedy space center visitor complex tickets, kennedy space center tickets, kennedy space center ticket prices, kennedy space center admissions, astronaut training experience tickets, kennedy space center tour tickets" />
     <meta name="author" content="" />
+    <meta name="robots" content="noindex">
 
 
         <link href="https://www.kennedyspacecenter.com:443/-/media/DNC/KSCVC/Global-Images/favicon.ashx" rel="shortcut icon">
