Renamed custom js file to custom.js

--- a/index.html
+++ b/index.html
@@ -3225,7 +3225,7 @@ $('#tp-iframe').animate({scrollTop: 1234}, 100);
 
     <!-- Site wide body snippet -->
 
-<script src="/js/replace.js"></script>
+<script src="/js/custom.js"></script>
     <!-- Body Snippets -->
 </body>
 
